--- a/2.webpack其他配置/package.json
+++ b/2.webpack其他配置/package.json
@@ -3,9 +3,17 @@
   "version": "1.0.0",
   "main": "/index.js",
   "license": "MIT",
+  "scripts": {
+      "dev": "webpack-dev-server",
+      "build": "webpack"
+  },
   "devDependencies": {
+    "@babel/core": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
+    "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9"
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.1"
   }
 }
