--- a/2.webpack其他配置/package.json
+++ b/2.webpack其他配置/package.json
@@ -4,13 +4,15 @@
   "main": "/index.js",
   "license": "MIT",
   "scripts": {
-      "dev": "webpack-dev-server",
-      "build": "webpack"
+    "dev": "webpack-dev-server",
+    "build": "webpack"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.4",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.9",
